style: ensure pokemon details is more readable

--- a/src/features/pokemon/pokemon-details/components/styles/general.module.scss
+++ b/src/features/pokemon/pokemon-details/components/styles/general.module.scss
@@ -29,12 +29,12 @@
 
   h2 {
     font-size: var(--size-4);
-    font-weight: 600;
-    filter: brightness(0.6);
+    font-weight: var(--font-weight-5);
+    filter: brightness(0.5);
   }
 
   p {
-    filter: brightness(0.6);
+    filter: brightness(0.5);
   }
 }
 
@@ -49,17 +49,16 @@
   overflow: auto;
   margin-inline-start: var(--size-5);
   white-space: nowrap;
-  border-radius: var(--size-1);
   gap: var(--size-2);
 }
 
 .abilityWrapper {
-  color: var(--background);
   padding-inline: var(--size-2);
   border-radius: var(--size-3);
 
   p {
     filter: initial;
+    color: var(--background);
     font-size: var(--size-3);
   }
 }
@@ -67,7 +66,7 @@
 @include media-query($small) {
   .container {
     font-size: var(--size-5);
-    gap: var(--size-6);
+    margin-inline-start: initial;
   }
 
   .dataField {
