--- a/src/features/pokemon/pokemon-details/pokemon-details.module.scss
+++ b/src/features/pokemon/pokemon-details/pokemon-details.module.scss
@@ -1,11 +1,18 @@
 @use '@/styles/sass/abstracts' as *;
 
+.gradientBg {
+  position: absolute;
+  filter: brightness(0.9);
+  width: 100%;
+  height: 100%;
+}
+
 .container {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
   height: 100vh;
-  @include fade-in(500ms);
 }
 
 .returnArrow {
@@ -14,7 +21,7 @@
   z-index: 1;
 
   svg {
-    width: var(--size-7);
+    width: var(--size-8);
     height: auto;
   }
 }
@@ -29,7 +36,7 @@
   justify-content: center;
   position: relative;
   width: 100%;
-  min-height: 8rem;
+  height: 100%;
 
   & div:first-child {
     position: absolute;
@@ -37,9 +44,10 @@
     overflow: hidden;
     display: flex;
     justify-content: center;
-    letter-spacing: var(--font-letterspacing-4);
-    font-size: 6rem;
-    mix-blend-mode: multiply;
+    letter-spacing: var(--font-letterspacing-5);
+    font-size: var(--font-size-6);
+    font-weight: var(--font-weight-6);
+    mix-blend-mode: color-burn;
     white-space: nowrap;
   }
 }
@@ -51,7 +59,7 @@
 
 .pokeImg {
   @include fade-in(300ms);
-  width: 40%;
+  width: 50%;
   height: auto;
   margin-block: var(--size-2);
 }
@@ -73,21 +81,14 @@
   .pokeImgContainer {
     align-self: center;
     & div:first-child {
-      top: 50%;
+      bottom: 5%;
       letter-spacing: var(--font-letterspacing-5);
-      font-size: var(--size-10);
+      font-size: var(--font-size-7);
     }
   }
 
   .pokeImg {
     width: 80%;
-    max-width: 100%;
-  }
-
-  .returnArrow {
-    svg {
-      width: var(--size-8);
-    }
   }
 
   .detailsContainer {
